...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="goToPreviousProducer"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/viewProducerTin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/nextProducer3"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="goToNextProducer"
            android:src="@drawable/ic_arrow_forward_black_24dp" />

...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Σύνολο καταμετρηθέντων"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp" />

    </LinearLayout>
...
            android:text="Χωρίς σήμανση"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_width="0dp" />

        <TextView
            android:id="@+id/noTag"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="18sp" />
    </LinearLayout>

...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="&lt; των 6 μηνών:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/noTagUnder6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />

...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Χωρίς ηλεκτρονική σήμανση:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/noElectronicTag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />

...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Με ένα ενώτιο:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/singleTag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Eκτός μητρώου:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/countedButNotInRegistry"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Προβατίνες"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sheepTotalValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />

...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Κατσίκες"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/goatTotalValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />

...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Κριάρια - Τράγοι"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ramTotalValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />

...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Αμνοερίφια"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lambsTotalValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />

...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Ιπποειδή"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/horseTotalValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />

...
