...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gotoStep5Screen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goToInspectionStepFiveActivity"
            android:text="@string/step5Activity"
            android:textSize="20sp" />
...
            android:layout_height="match_parent"
            android:onClick="goToPreviousProducer"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/previousProducer" />

        <TextView
            android:id="@+id/noEarringTin"
            android:layout_width="274dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/nextProducer"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="goToNextProducer"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            android:contentDescription="@string/nextProducer" />
...
