...
        android:layout_weight="1"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="5dp"
        android:textAlignment="center"
...
        android:gravity="center"
        android:padding="5dp"
        android:text=""
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/viewComments"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="5dp"
        android:textAlignment="center"
...
